<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.koushik.homework04.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="16dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tv_welcome" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/pb_home" />

    <TextView
        android:text="@string/trivia_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_trivia"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:id="@+id/tv_ready" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/trivia"
        android:id="@+id/iv_trivia"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/loading_trivia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pb_home"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:id="@+id/tv_loading_trivia"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/tv_ready"
        android:layout_toStartOf="@+id/tv_ready"
        android:layout_marginBottom="19dp"
        android:id="@+id/btn_exit" />

    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_exit"
        android:layout_toRightOf="@+id/tv_ready"
        android:layout_toEndOf="@+id/tv_ready"
        android:id="@+id/btn_start" />

</RelativeLayout>
